--- a/07-PODs-with-YAML/kube-manifests/02-pod-definition.yml
+++ b/07-PODs-with-YAML/kube-manifests/02-pod-definition.yml
@@ -9,7 +9,7 @@ spec:
   containers:
     - name: myapp
       image: stacksimplify/kubenginx:1.0.0
-      ports
+      ports:
         - containerPort: 80 
 
     
