4th Commit: Changes in 10-Services

--- a/10-Services-with-YAML/kube-manifests/03-frontend-deployment.yml
+++ b/10-Services-with-YAML/kube-manifests/03-frontend-deployment.yml
@@ -1,16 +1,17 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:
+metadata: 
   name: frontend-nginxapp
-  labels: 
+  labels:
     app: frontend-nginxapp
     tier: frontend
+
 spec:
   replicas: 3
   selector:
     matchLabels:
       app: frontend-nginxapp
-  template: 
+  template:
     metadata:
       labels:
         app: frontend-nginxapp
@@ -18,6 +19,8 @@ spec:
     spec:
       containers:
         - name: frontend-nginxapp
-          image: stacksimplify/kube-frontend-nginx:1.0.0
-          ports:
-            - containerPort: 80
+          images: stacksimplify/kube-frontend-nginx:1.0.0
+          ports: 
+            - cotainerPort: 80
+
+    
