--- a/08-ReplicaSets-with-YAML/kube-manifests/02-replicaset-definition.yml
+++ b/08-ReplicaSets-with-YAML/kube-manifests/02-replicaset-definition.yml
@@ -1,23 +1,22 @@
 apiVersion: apps/v1
 kind: ReplicaSet
 metadata:
-  name: myapp2-rs  
+  name: myapp2-rs
 spec:
   replicas: 3
-  selector:
+  selector: 
     matchLabels:
       app: myapp2
-  template: 
-    metadata: # Dictionary
+  template:
+    metadata: 
       name: myapp2-pod
-      labels: # Dictionary 
-        app: myapp2         
+      labels: 
+        app: myapp2
     spec:
-      containers: # List
-        - name: myapp2-container
+      containers:
+        - name: myapp2
           image: stacksimplify/kubenginx:2.0.0
           ports:
-            - containerPort: 80
-
+            - containerPort: 80 
 
     
