--- a/10-Services-with-YAML/kube-manifests/02-backend-clusterip-service.yml
+++ b/10-Services-with-YAML/kube-manifests/02-backend-clusterip-service.yml
@@ -1,15 +1,16 @@
 apiVersion: v1
-kind: Service
-metadata:
-  name: my-backend-service ## VERY VERY IMPORTANT - NGINX PROXYPASS needs this name
-  labels: 
+kind: Service 
+metadata: 
+  name: my-backend-service
+  labels:
     app: backend-restapp
     tier: backend
+
 spec:
-  #type: Cluster IP is a default service
   selector:
     app: backend-restapp
-  ports: 
+  ports:
     - name: http
-      port: 8080 # ClusterIp Service Port
-      targetPort: 8080 # Container Port
+      port: 8080 #ClusterIp service port
+      targetPort: 8080 #Container Port
+  #type: ClusterIp is the default service
